[package]
name = "wikibase-merge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.11"}
tokio = {version = "1.19.2", features = ["full"]}
clap = {version = "3.2.6", features = ["derive", "env"]}
atty="0.2"
env_logger = "0.9"
log = "0.4"
lazy_static = "1.3.0"
futures = "0.3.21"
tokio-stream = "0.1.9"
async-recursion = "1.0.0"